<resources>
    <string name="app_name">e-learning</string>
    <string name="error_message">Some error occurred</string>
    <string name="release_date">Release date:</string>
    <string name="register_course">Вчитись</string>
    <string name="movie_picker">Movie Picker</string>
    <string name="movie_notification_description">It`s time to watch this film!</string>
    <string name="channel_name">Movie Alarm Channel</string>
    <string name="channel_description">This notification will show the film which you picked</string>
    <string name="news_title">Новини</string>
    <string name="courses_title">Курси</string>
    <string name="account">Акаунт</string>
    <string name="enterEmail">Email address</string>
    <string name="enterPassword">Password</string>
    <string name="loginButtonText">Увійти</string>
    <string name="comments">Коментарі</string>
    <string name="lessonDetailsTitle">Урок</string>
</resources>