<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigation_graph"
    app:startDestination="@id/newsFragment">

    <fragment
        android:id="@+id/newsFragment"
        android:name="com.robosh.basestartapplication.home.view.NewsFragment"
        android:label="@string/news_title" />

    <fragment
        android:id="@+id/coursesFragment"
        android:name="com.robosh.basestartapplication.courses.view.DetailCoursesFragment"
        android:label="@string/courses_title">
        <action
            android:id="@+id/action_coursesFragment_to_detailsCourseFragment"
            app:destination="@id/detailsCourseFragment"
            app:enterAnim="@anim/slide_in_to_right"
            app:exitAnim="@anim/slide_out_to_left"
            app:popEnterAnim="@anim/slide_in_from_left"
            app:popExitAnim="@anim/slide_out_to_right" />
    </fragment>

    <fragment
        android:id="@+id/detailsCourseFragment"
        android:name="com.robosh.basestartapplication.detail.view.DetailCourseFragment"
        android:label="Детальна інформація" />

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.robosh.basestartapplication.login.LoginFragment"
        android:label="LoginFragment">
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.robosh.basestartapplication.register.RegisterFragment"
        android:label="RegisterFragment" />
    <fragment
        android:id="@+id/accountFragment"
        android:name="com.robosh.basestartapplication.account.AccountFragment"
        android:label="@string/account" />

</navigation>